// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/pages/LeadManagementSystem/Dashboard/DetailPhase2/elements/FormValidate/elements/CompanyValidation render 1`] = `
<React.Fragment>
  <Styled(MuiBox)
    sx={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "gap": 16,
        "textAlign": "center",
      }
    }
  >
    <Typography
      className=""
      color="general-dark"
      inline={true}
      variant="h5"
      weight="medium"
    >
      Please assign this lead
    </Typography>
    <Typography
      className=""
      color="general-mid"
      inline={false}
      variant="caption"
      weight="normal"
    >
       
      First, please make a validation of company
       
    </Typography>
  </Styled(MuiBox)>
  <Styled(MuiBox)
    my={3}
  >
    <Stepper
      accessibleTab={-1}
      active={0}
      errors={null}
      errorsLabel=""
      steps={
        Array [
          "Company Validation",
          "Choose Option",
          "Fill Option Data",
        ]
      }
      variant="number"
      warnings=""
    />
  </Styled(MuiBox)>
  <Styled(MuiBox)>
    <Styled(MuiBox)
      sx={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "gap": 16,
        }
      }
    >
      <Select
        control={Object {}}
        error={false}
        helperText=""
        isDisabled={false}
        isSearchable={true}
        label="Company Name"
        maxWidth="100%"
        menuWidth={360}
        name="companyName"
        rawValue={true}
        required={true}
        shouldUnregister={false}
        staticWidth="100%"
      />
      <Unknown
        control={Object {}}
        name="isOtherCustomer"
        render={[Function]}
      />
    </Styled(MuiBox)>
  </Styled(MuiBox)>
  <WithStyles(ForwardRef(Grid))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "propTypes": Object {
          "alignContent": [Function],
          "alignItems": [Function],
          "alignSelf": [Function],
          "bgcolor": [Function],
          "border": [Function],
          "borderBottom": [Function],
          "borderColor": [Function],
          "borderLeft": [Function],
          "borderRadius": [Function],
          "borderRight": [Function],
          "borderTop": [Function],
          "bottom": [Function],
          "boxShadow": [Function],
          "boxSizing": [Function],
          "children": [Function],
          "className": [Function],
          "clone": [Function],
          "color": [Function],
          "component": [Function],
          "css": [Function],
          "display": [Function],
          "displayPrint": [Function],
          "flex": [Function],
          "flexBasis": [Function],
          "flexDirection": [Function],
          "flexGrow": [Function],
          "flexShrink": [Function],
          "flexWrap": [Function],
          "fontFamily": [Function],
          "fontSize": [Function],
          "fontStyle": [Function],
          "fontWeight": [Function],
          "gridArea": [Function],
          "gridAutoColumns": [Function],
          "gridAutoFlow": [Function],
          "gridAutoRows": [Function],
          "gridColumn": [Function],
          "gridColumnGap": [Function],
          "gridGap": [Function],
          "gridRow": [Function],
          "gridRowGap": [Function],
          "gridTemplateAreas": [Function],
          "gridTemplateColumns": [Function],
          "gridTemplateRows": [Function],
          "height": [Function],
          "justifyContent": [Function],
          "justifyItems": [Function],
          "justifySelf": [Function],
          "left": [Function],
          "letterSpacing": [Function],
          "lineHeight": [Function],
          "m": [Function],
          "margin": [Function],
          "marginBottom": [Function],
          "marginLeft": [Function],
          "marginRight": [Function],
          "marginTop": [Function],
          "marginX": [Function],
          "marginY": [Function],
          "maxHeight": [Function],
          "maxWidth": [Function],
          "mb": [Function],
          "minHeight": [Function],
          "minWidth": [Function],
          "ml": [Function],
          "mr": [Function],
          "mt": [Function],
          "mx": [Function],
          "my": [Function],
          "order": [Function],
          "overflow": [Function],
          "p": [Function],
          "padding": [Function],
          "paddingBottom": [Function],
          "paddingLeft": [Function],
          "paddingRight": [Function],
          "paddingTop": [Function],
          "paddingX": [Function],
          "paddingY": [Function],
          "pb": [Function],
          "pl": [Function],
          "position": [Function],
          "pr": [Function],
          "pt": [Function],
          "px": [Function],
          "py": [Function],
          "right": [Function],
          "sx": [Function],
          "textAlign": [Function],
          "textOverflow": [Function],
          "top": [Function],
          "visibility": [Function],
          "whiteSpace": [Function],
          "width": [Function],
          "zIndex": [Function],
        },
        "render": [Function],
      }
    }
    container={true}
    justifyContent="center"
    spacing={2}
    sx={
      Object {
        "padding": 16,
        "pt": 4,
        "width": "100%",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Button
        disabled={false}
        leftIcon={null}
        loading={false}
        ml={0}
        mr={0}
        onClick={[MockFunction]}
        rightIcon={null}
        rounded="normal"
        textTransform="uppercase"
        variant="ghost"
      >
        Cancel
      </Button>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Button
        disabled={false}
        leftIcon={null}
        loading={false}
        ml={0}
        mr={0}
        onClick={[Function]}
        rightIcon={null}
        rounded="normal"
        textTransform="uppercase"
        variant="filled"
      >
         Next 
      </Button>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</React.Fragment>
`;

exports[`src/pages/LeadManagementSystem/Dashboard/DetailPhase2/elements/FormValidate/elements/CompanyValidation render isOtherCustomer 1`] = `
<React.Fragment>
  <Styled(MuiBox)
    sx={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "gap": 16,
        "textAlign": "center",
      }
    }
  >
    <Typography
      className=""
      color="general-dark"
      inline={true}
      variant="h5"
      weight="medium"
    >
      Please assign this lead
    </Typography>
    <Typography
      className=""
      color="general-mid"
      inline={false}
      variant="caption"
      weight="normal"
    >
       
      First, please make a validation of company
       
    </Typography>
  </Styled(MuiBox)>
  <Styled(MuiBox)
    my={3}
  >
    <Stepper
      accessibleTab={-1}
      active={0}
      errors={null}
      errorsLabel=""
      steps={
        Array [
          "Company Validation",
          "Choose Option",
          "Fill Option Data",
        ]
      }
      variant="number"
      warnings=""
    />
  </Styled(MuiBox)>
  <Styled(MuiBox)>
    <Styled(MuiBox)
      sx={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "gap": 16,
        }
      }
    >
      <Select
        control={Object {}}
        error={false}
        helperText=""
        isDisabled={true}
        isSearchable={true}
        label="Company Name"
        maxWidth="100%"
        menuWidth={360}
        name="companyName"
        rawValue={true}
        required={true}
        shouldUnregister={false}
        staticWidth="100%"
      />
      <Unknown
        control={Object {}}
        name="isOtherCustomer"
        render={[Function]}
      />
      <TextField
        control={Object {}}
        disabled={false}
        error={false}
        helperText=""
        label="Company Name"
        maxLength={50}
        name="otherCompanyName"
        required={true}
        shouldUnregister={false}
      />
    </Styled(MuiBox)>
  </Styled(MuiBox)>
  <WithStyles(ForwardRef(Grid))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "propTypes": Object {
          "alignContent": [Function],
          "alignItems": [Function],
          "alignSelf": [Function],
          "bgcolor": [Function],
          "border": [Function],
          "borderBottom": [Function],
          "borderColor": [Function],
          "borderLeft": [Function],
          "borderRadius": [Function],
          "borderRight": [Function],
          "borderTop": [Function],
          "bottom": [Function],
          "boxShadow": [Function],
          "boxSizing": [Function],
          "children": [Function],
          "className": [Function],
          "clone": [Function],
          "color": [Function],
          "component": [Function],
          "css": [Function],
          "display": [Function],
          "displayPrint": [Function],
          "flex": [Function],
          "flexBasis": [Function],
          "flexDirection": [Function],
          "flexGrow": [Function],
          "flexShrink": [Function],
          "flexWrap": [Function],
          "fontFamily": [Function],
          "fontSize": [Function],
          "fontStyle": [Function],
          "fontWeight": [Function],
          "gridArea": [Function],
          "gridAutoColumns": [Function],
          "gridAutoFlow": [Function],
          "gridAutoRows": [Function],
          "gridColumn": [Function],
          "gridColumnGap": [Function],
          "gridGap": [Function],
          "gridRow": [Function],
          "gridRowGap": [Function],
          "gridTemplateAreas": [Function],
          "gridTemplateColumns": [Function],
          "gridTemplateRows": [Function],
          "height": [Function],
          "justifyContent": [Function],
          "justifyItems": [Function],
          "justifySelf": [Function],
          "left": [Function],
          "letterSpacing": [Function],
          "lineHeight": [Function],
          "m": [Function],
          "margin": [Function],
          "marginBottom": [Function],
          "marginLeft": [Function],
          "marginRight": [Function],
          "marginTop": [Function],
          "marginX": [Function],
          "marginY": [Function],
          "maxHeight": [Function],
          "maxWidth": [Function],
          "mb": [Function],
          "minHeight": [Function],
          "minWidth": [Function],
          "ml": [Function],
          "mr": [Function],
          "mt": [Function],
          "mx": [Function],
          "my": [Function],
          "order": [Function],
          "overflow": [Function],
          "p": [Function],
          "padding": [Function],
          "paddingBottom": [Function],
          "paddingLeft": [Function],
          "paddingRight": [Function],
          "paddingTop": [Function],
          "paddingX": [Function],
          "paddingY": [Function],
          "pb": [Function],
          "pl": [Function],
          "position": [Function],
          "pr": [Function],
          "pt": [Function],
          "px": [Function],
          "py": [Function],
          "right": [Function],
          "sx": [Function],
          "textAlign": [Function],
          "textOverflow": [Function],
          "top": [Function],
          "visibility": [Function],
          "whiteSpace": [Function],
          "width": [Function],
          "zIndex": [Function],
        },
        "render": [Function],
      }
    }
    container={true}
    justifyContent="center"
    spacing={2}
    sx={
      Object {
        "padding": 16,
        "pt": 4,
        "width": "100%",
      }
    }
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Button
        disabled={false}
        leftIcon={null}
        loading={false}
        ml={0}
        mr={0}
        onClick={[MockFunction]}
        rightIcon={null}
        rounded="normal"
        textTransform="uppercase"
        variant="ghost"
      >
        Cancel
      </Button>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Button
        disabled={false}
        leftIcon={null}
        loading={false}
        ml={0}
        mr={0}
        onClick={[Function]}
        rightIcon={null}
        rounded="normal"
        textTransform="uppercase"
        variant="filled"
      >
         Next 
      </Button>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</React.Fragment>
`;
